# Hexlet_Django

./: Makefile  db.sqlite3  pyproject.toml
hello_django/: settings.py  urls.py  views.py
hello_django/calc/: urls.py  views.py
hello_django/calc/migrations/: 0001_initial.py
hello_django/calc/templates/calc/: index.html
