[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = "Hexlet Django tutorial"
authors = ["Alexander Izvekov <izvekov.web@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"


[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
